# drf-with-mongoengine

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
app/: db.sqlite3  manage.py  permissions.py
app/accounts/: admin.py  authentication.py  models.py  routers.py  serializers.py  views.py
app/gears/: models.py  routers.py  serializers.py  views.py
app/muser-project/: settings.py  urls.py  wsgi.py
